--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,17 @@ SQLAlchemy==1.4.7
 text-unidecode==1.3
 Werkzeug==0.16.0
 WTForms==2.3.3
+
+Flask-Login==0.4.0
+Flask-Migrate==2.0.2
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.4.0
+Flask-WTF==0.14.2
+Flask-User==1.0.1.5
+
+pytest==3.0.5
+pytest-cov==2.4.0
+SQLAlchemy~=1.4.6
+WTForms~=2.3.3
+mysql~=0.0.2
+mysql-connector-python~=8.0.23
